# labthings-skrpico-1.0

./: README.md  commands.md  ofm_config_full.json  printer.cfg  pyproject.toml
models/: 28byjToNema14XYaxisDirect.FCStd  28byjToNema14ZaxisDirect.FCStd  directScrewMount.FCStd  picoTray.FCStd
models/stl/: 28byjToNema14XYaxisDirect-28byjToNema14XYAxis.stl  28byjToNema14ZaxisDirect-28byjToNema14ZAxis.stl  directScrewMount-screwStepperConnector_new.stl  picoTray-skrpicoTray.stl
src/labthings_sangaboard/: __init__.py  server.py  skrPico.py
